--- a/src/atarashii.html
+++ b/src/atarashii.html
@@ -90,7 +90,7 @@
       <div>
         <h1  data-aos="fade-up" data-aos-duration="1000">ATARASHII GAKKO</h1>
         <h3  data-aos="fade-up" data-aos-duration="1000">Diseño y desarrollo web - 2022</h3>
-        <p  data-aos="fade-up" data-aos-duration="1000">Partiendo de un boilerplate moderno, se ha
+        <p data-aos="fade-up" data-aos-duration="1000">Partiendo de un boilerplate moderno, se ha
           diseñado y desarrollado la página web de Atarashii Gakkou no
           Leaders, un grupo de música J-pop (con influencia jazz) formado por cuatro chicas (Uzuka, Mizyu, Rin y Kanon)
           que debutó en 2021 en el festival <b>88rising</b>.
@@ -98,7 +98,7 @@
         <p  data-aos="fade-up" data-aos-duration="1000">En la página web se puede encontrar información
           sobre cada uno de los miembros del grupo, los detalles de sus
           próximos eventos y conciertos, toda su discografía y un blog con sus noticias más recientes.</p>
-          <p  data-aos="fade-up" data-aos-duration="1000" class="project-link project-link-a" >Puedes visitar el proyecto: <a href="https://atarashii-gakko.netlify.app" target="_blank">www.atarashii-gakko.com</a></p>
+          <p data-aos="fade-up" data-aos-duration="1000" class="project-link project-link-a" >Puedes visitar el proyecto: <a href="https://atarashii-gakko.netlify.app" target="_blank">www.atarashii-gakko.com</a></p>
         <div class="program"  data-aos="fade-up" data-aos-duration="1000">
           <img src="./assets/images/figma.png" alt="figma icon" >
           <img src="./assets/images/html.png" alt="HTML icon" >
@@ -111,36 +111,36 @@
           <div class="flex-item flex-pc"><img src="./assets/images/1.1.atarashii-gakko.png" alt="atarashii gakko web"
                data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item  flex-pc"><img src="./assets/images/1.2.atarashii-gakko.png" alt="atarashii gakko web"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item  flex-pc"><img src="./assets/images/1.3.atarashii-gakko.png" alt="atarashii gakko web"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item  flex-pc"><img src="./assets/images/1.4.atarashii-gakko.png" alt="atarashii gakko web"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item  flex-pc flex-pc-2"><img src="./assets/images/1.5.atarashii-gakko.png"
-              alt="atarashii gakko web"  data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="atarashii gakko web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item  flex-pc"><img src="./assets/images/1.6.atarashii-gakko.png" alt="atarashii gakko web"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item  flex-pc"><img src="./assets/images/1.7.atarashii-gakko.png" alt="atarashii gakko web"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item  flex-pc"><img src="./assets/images/1.8.atarashii-gakko.png" alt="atarashii gakko web"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
 
           <div class="flex-item flex-tablet"><img src="./assets/images/1.9.atarashii-gakko.png"
-              alt="atarashii gakko web"  data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="atarashii gakko web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-tablet"><img src="./assets/images/1.10.atarashii-gakko.png"
-              alt="atarashii gakko web"  data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="atarashii gakko web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-tablet"><img src="./assets/images/1.11.atarashii-gakko.png"
-              alt="atarashii gakko web"  data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="atarashii gakko web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-tablet"><img src="./assets/images/1.12.atarashii-gakko.png"
-              alt="atarashii gakko web"  data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="atarashii gakko web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-tablet"><img src="./assets/images/1.13.atarashii-gakko.png"
-              alt="atarashii gakko web"  data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="atarashii gakko web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-tablet"><img src="./assets/images/1.14.atarashii-gakko.png"
-              alt="atarashii gakko web"  data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="atarashii gakko web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-tablet"><img src="./assets/images/1.15.atarashii-gakko.png"
-              alt="atarashii gakko web"  data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="atarashii gakko web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-tablet"><img src="./assets/images/1.16.atarashii-gakko.png"
-              alt="atarashii gakko web"  data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="atarashii gakko web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
 
           <div class="flex-item"><img src="./assets/images/1.17.atarashii-gakko.png" alt="atarashii gakko web"></div>
           <div class="flex-item"><img src="./assets/images/1.18.atarashii-gakko.png" alt="atarashii gakko web"></div>
