--- a/src/flux.html
+++ b/src/flux.html
@@ -102,7 +102,7 @@
 
         <div class="program" data-aos="fade-up" data-aos-duration="1000">
 
-          <img src="./assets/images/photoshop.png" alt="Photoshop icon" >
+          <img src="./assets/images/photoshop.png" alt="Photoshop icon">
           <img src="./assets/images/illustrator.png" alt="Illustrator icon" >
 
         </div>
@@ -114,48 +114,48 @@
 
 
 
-          <div class="flex-item"><img src="./assets/images/7.1.flux.png" alt="flux identidad corporativa" 
+          <div class="flex-item"><img src="./assets/images/7.1.flux.png" alt="flux identidad corporativa"
               data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-item2"><img src="./assets/images/7.2.flux.png" alt="flux identidad corporativa"
-               data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.3.flux.png" alt="flux identidad corporativa" 
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/7.3.flux.png" alt="flux identidad corporativa" loading="lazy"
               data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.4.flux.png" alt="flux identidad corporativa" 
+          <div class="flex-item"><img src="./assets/images/7.4.flux.png" alt="flux identidad corporativa" loading="lazy"
               data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.5.flux.png" alt="flux identidad corporativa" 
+          <div class="flex-item"><img src="./assets/images/7.5.flux.png" alt="flux identidad corporativa" loading="lazy"
               data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.6.flux.png" alt="flux identidad corporativa" 
+          <div class="flex-item"><img src="./assets/images/7.6.flux.png" alt="flux identidad corporativa" loading="lazy"
               data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.7.flux.png" alt="flux identidad corporativa" 
+          <div class="flex-item"><img src="./assets/images/7.7.flux.png" alt="flux identidad corporativa" loading="lazy"
               data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.8.flux.png" alt="flux identidad corporativa" 
+          <div class="flex-item"><img src="./assets/images/7.8.flux.png" alt="flux identidad corporativa" loading="lazy"
               data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.9.flux.png" alt="flux identidad corporativa" 
+          <div class="flex-item"><img src="./assets/images/7.9.flux.png" alt="flux identidad corporativa" loading="lazy"
               data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.10.flux.png" alt="flux identidad corporativa"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.11.flux.png" alt="flux identidad corporativa"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.12.flux.png" alt="flux identidad corporativa"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.13.flux.png" alt="flux identidad corporativa"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.14.flux.png" alt="flux identidad corporativa"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.15.flux.png" alt="flux identidad corporativa"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.16.flux.png" alt="flux identidad corporativa"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.17.flux.png" alt="flux identidad corporativa"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.18.flux.png" alt="flux identidad corporativa"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.19.flux.png" alt="flux identidad corporativa"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.20.flux.png" alt="flux identidad corporativa"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.21.flux.png" alt="flux identidad corporativa"
-               data-aos="fade-up" data-aos-duration="1000"></div>
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
 
         </div>
         <section class="recomendations-recipe">
