--- a/src/gracias.html
+++ b/src/gracias.html
@@ -81,7 +81,7 @@
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header modal-text-center">
-              <img src="/src/assets/images/socialemoji.gif" alt="memoji" >
+              <img src="/src/assets/images/socialemoji.gif" alt="memoji" loading="lazy">
             </div>
             <div class="modal-header modal-text-center">
               <p>Gracias por el mensaje,<br>en breves me pondré en contacto contigo</p>
