--- a/src/index.html
+++ b/src/index.html
@@ -95,60 +95,60 @@
         <figure>
           <picture>
             <source media="(max-width:576px)" srcset="./assets/images/22.atarashii-background.jpg-movil.jpg"
-              alt="Atarashii background" >
-            <img src="./assets/images/22.atarashii-background.jpg" alt="Atarashii background" >
+              alt="Atarashii background" loading="lazy">
+            <img src="./assets/images/22.atarashii-background.jpg" alt="Atarashii background" loading="lazy">
           </picture>
           <picture>
             <source media="(max-width:576px)" srcset="./assets/images/23.gig-background-movil.jpg" alt="GIG background"
-              >
-            <img src="./assets/images/23.gig-background.jpg" alt="GIG background" >
+              loading="lazy">
+            <img src="./assets/images/23.gig-background.jpg" alt="GIG background" loading="lazy">
           </picture>
           <picture>
             <source media="(max-width:576px)" srcset="./assets/images/24.maow-background-movil.jpg"
-              alt="Dom Sum background" >
-            <img src="./assets/images/24.maow-background.jpg" alt="Dom Sum background" >
+              alt="Dom Sum background" loading="lazy">
+            <img src="./assets/images/24.maow-background.jpg" alt="Dom Sum background" loading="lazy">
           </picture>
           <picture>
             <source media="(max-width:576px)" srcset="./assets/images/25.postal-background-movil.jpg"
-              alt="Postal background" >
-            <img src="./assets/images/25.postal-background.jpg" alt="Postal background" >
+              alt="Postal background" loading="lazy">
+            <img src="./assets/images/25.postal-background.jpg" alt="Postal background" loading="lazy">
           </picture>
           <picture>
             <source media="(max-width:576px)" srcset="./assets/images/26.dom-sum-background-movil.jpg"
-              alt="Dom Sum Backgorund" >
-            <img src="./assets/images/26.dom-sum-background.jpg" alt="Dom Sum Backgorund" >
+              alt="Dom Sum Backgorund" loading="lazy">
+            <img src="./assets/images/26.dom-sum-background.jpg" alt="Dom Sum Backgorund" loading="lazy">
           </picture>
           <picture>
             <source media="(max-width:576px)" srcset="./assets/images/27.feel-factory-background-movil.jpg"
-              alt="feel factory background" >
-            <img src="./assets/images/27.feel-factory-background.jpg" alt="feel factory background" >
+              alt="feel factory background" loading="lazy">
+            <img src="./assets/images/27.feel-factory-background.jpg" alt="feel factory background" loading="lazy">
           </picture>
           <picture>
             <source media="(max-width:576px)" srcset="./assets/images/28.flux-background-movil.jpg"
-              alt="flux background" >
-            <img src="./assets/images/28.flux-background.jpg" alt="flux background" >
+              alt="flux background" loading="lazy">
+            <img src="./assets/images/28.flux-background.jpg" alt="flux background" loading="lazy">
           </picture>
           <picture>
             <source media="(max-width:576px)" srcset="./assets/images/29.radicaleslibres-background-movil.jpg"
-              alt="radicales libres background" >
+              alt="radicales libres background" loading="lazy">
             <img src="./assets/images/29.radicaleslibres-background.jpg" alt="radicales libres background"
-              >
+              loading="lazy">
           </picture>
           <picture>
             <source media="(max-width:576px)" srcset="./assets/images/24.maow-background-movil.jpg"
-              alt="Dom Sum background" >
-            <img src="./assets/images/24.maow-background.jpg" alt="Dom Sum background" >
+              alt="Dom Sum background" loading="lazy">
+            <img src="./assets/images/24.maow-background.jpg" alt="Dom Sum background" loading="lazy">
           </picture>
         </figure>
       </section>
       <div class="phones">
         <img src="./assets/images/0.1.phone.png" alt="Phone GIG"  data-aos="fade-up"
           data-aos-duration="1000">
-        <img src="./assets/images/0.2.phone.png" alt="Phone Maow"  data-aos="fade-up"
+        <img src="./assets/images/0.2.phone.png" alt="Phone Maow" loading="lazy" data-aos="fade-up"
           data-aos-duration="1000">
-        <img src="./assets/images/0.3.phone.png" alt="Phone Flux"  data-aos="fade-up"
+        <img src="./assets/images/0.3.phone.png" alt="Phone Flux" loading="lazy" data-aos="fade-up"
           data-aos-duration="1000">
-        <img src="./assets/images/0.4.phone.png" alt="Phone Atarashii"  data-aos="fade-up"
+        <img src="./assets/images/0.4.phone.png" alt="Phone Atarashii" loading="lazy" data-aos="fade-up"
           data-aos-duration="1000">
       </div>
     </article>
@@ -260,7 +260,7 @@
           <section class="card" data-aos="fade-up" data-aos-duration="1000">
             <a href="feelfactory.html">
               <div class="card-header">
-                <img src="./assets/images/30.6.feelfactory.jpg" alt="Feel Factory" >
+                <img src="./assets/images/30.6.feelfactory.jpg" alt="Feel Factory">
               </div>
               <div class="card-body">
                 <h1>FEEL FACTORY </h1>
@@ -318,7 +318,7 @@
             <source media="(max-width: 567px)" srcset="./assets/images/afernandez-567.jpg">
             <source media="(max-width: 810px)" srcset="./assets/images/afernandez-810.jpg">
             <source media="(min-width: 810px)" srcset="./assets/images/anais-fernandez.jpg">
-            <img src="./assets/images/anais-fernandez.jpg" alt="Anaís Fernández" >
+            <img src="./assets/images/anais-fernandez.jpg" alt="Anaís Fernández" loading="lazy">
           </picture>
         </section>
         <section class="curriculumvitae">
@@ -447,11 +447,11 @@
               <p>Diseño gráfico<br></p>
             </div>
             <div class="icon-skill">
-              <img src="./assets/images/photoshop.png" alt="Photoshop icon" >
-              <img src="./assets/images/illustrator.png" alt="Illustrator icon" >
-              <img src="./assets/images/indesign.png" alt="Indesign icon" >
-              <img src="./assets/images/premiere.png" alt="Premiere icon" >
-              <img src="./assets/images/after-effects.png" alt="After effects" >
+              <img src="./assets/images/photoshop.png" alt="Photoshop icon" loading="lazy">
+              <img src="./assets/images/illustrator.png" alt="Illustrator icon" loading="lazy">
+              <img src="./assets/images/indesign.png" alt="Indesign icon" loading="lazy">
+              <img src="./assets/images/premiere.png" alt="Premiere icon" loading="lazy">
+              <img src="./assets/images/after-effects.png" alt="After effects" loading="lazy">
             </div>
           </div>
           <div class="flexbox-container">
@@ -459,8 +459,8 @@
               <p>Diseño web<br></p>
             </div>
             <div class="icon-skill">
-              <img src="./assets/images/figma.png" alt="Figma icon" >
-              <img src="./assets/images/xd.png" alt="Adobe XD icon" >
+              <img src="./assets/images/figma.png" alt="Figma icon" loading="lazy">
+              <img src="./assets/images/xd.png" alt="Adobe XD icon" loading="lazy">
             </div>
           </div>
           <div class="flexbox-container">
@@ -468,26 +468,26 @@
               <p>Desarrollo web<br></p>
             </div>
             <div class="icon-skill last-ul icon-skill-2">
-              <img src="./assets/images/html.png" alt="HTML icon" >
-              <img src="./assets/images/css.png" alt="CSS icon" >
-              <img src="./assets/images/sass.png" alt="SASS icon" >
-              <img src="./assets/images/javascript.png" alt="JS icon" >
-              <img src="./assets/images/git.png" alt="GIT icon" >
-              <img src="./assets/images/github.png" alt="Github icon" >
-              <img src="./assets/images/webflow.png" alt="Webflow icon" >
-              <img src="./assets/images/wordpress.png" alt="Wordpress icon" >
+              <img src="./assets/images/html.png" alt="HTML icon" loading="lazy">
+              <img src="./assets/images/css.png" alt="CSS icon" loading="lazy">
+              <img src="./assets/images/sass.png" alt="SASS icon" loading="lazy">
+              <img src="./assets/images/javascript.png" alt="JS icon" loading="lazy">
+              <img src="./assets/images/git.png" alt="GIT icon" loading="lazy">
+              <img src="./assets/images/github.png" alt="Github icon" loading="lazy">
+              <img src="./assets/images/webflow.png" alt="Webflow icon" loading="lazy">
+              <img src="./assets/images/wordpress.png" alt="Wordpress icon" loading="lazy">
             </div>
             <div class="icon-skill last-ul icon-skill-3 icon-skill-4">
-              <img src="./assets/images/html.png" alt="HTML icon" >
-              <img src="./assets/images/css.png" alt="CSS icon" >
-              <img src="./assets/images/sass.png" alt="SASS icon" >
-              <img src="./assets/images/javascript.png" alt="JS icon" >
-              <img src="./assets/images/git.png" alt="GIT icon" >
+              <img src="./assets/images/html.png" alt="HTML icon" loading="lazy">
+              <img src="./assets/images/css.png" alt="CSS icon" loading="lazy">
+              <img src="./assets/images/sass.png" alt="SASS icon" loading="lazy">
+              <img src="./assets/images/javascript.png" alt="JS icon" loading="lazy">
+              <img src="./assets/images/git.png" alt="GIT icon" loading="lazy">
             </div>
             <div class="icon-skill last-ul icon-skill-3">
-              <img src="./assets/images/github.png" alt="Github icon" >
-              <img src="./assets/images/webflow.png" alt="Webflow icon" >
-              <img src="./assets/images/wordpress.png" alt="Wordpress icon" >
+              <img src="./assets/images/github.png" alt="Github icon" loading="lazy">
+              <img src="./assets/images/webflow.png" alt="Webflow icon" loading="lazy">
+              <img src="./assets/images/wordpress.png" alt="Wordpress icon" loading="lazy">
             </div>
           </div>
           <h1>Idiomas</h1>
