--- a/src/maow.html
+++ b/src/maow.html
@@ -105,31 +105,31 @@
         <p  data-aos="fade-up" data-aos-duration="1000" class="project-link">El presente proyecto corresponde a mi trabajo de fin de grado en diseño gráfico, para conocerlo en mayor profundidad puedes acceder a su <a href="./assets/images/tfg.pdf" download="Curriculum vitae" >memoria</a>.</p>
         <div class="program"  data-aos="fade-up" data-aos-duration="1000">
 
-          <img src="./assets/images/figma.png" alt="Figma icon" >
-          <img src="./assets/images/illustrator.png" alt="Illustrator icon" >
+          <img src="./assets/images/figma.png" alt="Figma icon">
+          <img src="./assets/images/illustrator.png" alt="Illustrator icon">
 
         </div>
       </div>
       <div>
         <div class="flex-container">
-          <div class="flex-item"><img src="./assets/images/3.1.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-top"><img src="./assets/images/3.2.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.3.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.4.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.5.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.6.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.7.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.8.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.9.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.10.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.11.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.12.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.13.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.14.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.15.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.16.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.17.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.18.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.1.maow.png" alt="Maow Web" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-top"><img src="./assets/images/3.2.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.3.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.4.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.5.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.6.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.7.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.8.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.9.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.10.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.11.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.12.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.13.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.14.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.15.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.16.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.17.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.18.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
         </div>
         <section class="recomendations-recipe">
           <h1>Descubre más proyectos<spam> de diseño gráfico y web</spam>
