--- a/src/domsum.html
+++ b/src/domsum.html
@@ -90,12 +90,12 @@
     </article>
     <div class="flexbox-container">
       <div>
-        <h1  data-aos="fade-up" data-aos-duration="1000">DOM SUM</h1>
-        <h3  data-aos="fade-up" data-aos-duration="1000">Diseño y desarrollo web front-end – 2021</h3>
+        <h1 data-aos="fade-up" data-aos-duration="1000">DOM SUM</h1>
+        <h3 data-aos="fade-up" data-aos-duration="1000">Diseño y desarrollo web front-end – 2021</h3>
         <p  data-aos="fade-up" data-aos-duration="1000">Partiendo de un boilerplate moderno, se ha diseñado y desarrollado la página web DOM SUM, un pequeño portal
           de gastronomía en el que se explica detalladamente cómo cocinar platos típicos de todas las regiones de
           Tailandia. </p>
-        <p  data-aos="fade-up" data-aos-duration="1000">Son muchas las personas que deciden viajar a Tailandia por sus playas y su clima cálido, pero no todo el
+        <p data-aos="fade-up" data-aos-duration="1000">Son muchas las personas que deciden viajar a Tailandia por sus playas y su clima cálido, pero no todo el
           mundo es consciente de la riqueza gastronómica del país, con infinidad de platos, ingredientes y sabores que
           sorprenderán al viajero más curioso.</p>
           <div class="program"  data-aos="fade-up" data-aos-duration="1000">
@@ -109,24 +109,24 @@
       <div>
         <div class="flex-container">
           <div class="flex-item flex-pc"><img src="./assets/images/5.1.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item  flex-pc"><img src="./assets/images/5.2.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item  flex-pc"><img src="./assets/images/5.3.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item  flex-pc"><img src="./assets/images/5.4.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item  flex-pc"><img src="./assets/images/5.5.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item  flex-pc"><img src="./assets/images/5.2.domsum.png" alt="DOM SUM Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item  flex-pc"><img src="./assets/images/5.3.domsum.png" alt="DOM SUM Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item  flex-pc"><img src="./assets/images/5.4.domsum.png" alt="DOM SUM Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item  flex-pc"><img src="./assets/images/5.5.domsum.png" alt="DOM SUM Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
 
-          <div class="flex-item flex-tablet"><img src="./assets/images/5.6.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-tablet"><img src="./assets/images/5.7.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-tablet"><img src="./assets/images/5.8.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-tablet"><img src="./assets/images/5.9.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-tablet"><img src="./assets/images/5.10.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-tablet"><img src="./assets/images/5.11.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-tablet"><img src="./assets/images/5.6.domsum.png" alt="DOM SUM Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-tablet"><img src="./assets/images/5.7.domsum.png" alt="DOM SUM Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-tablet"><img src="./assets/images/5.8.domsum.png" alt="DOM SUM Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-tablet"><img src="./assets/images/5.9.domsum.png" alt="DOM SUM Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-tablet"><img src="./assets/images/5.10.domsum.png" alt="DOM SUM Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-tablet"><img src="./assets/images/5.11.domsum.png" alt="DOM SUM Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
 
-          <div class="flex-item"><img src="./assets/images/5.12.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/5.13.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/5.14.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/5.15.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/5.16.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/5.17.domsum.png" alt="DOM SUM Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/5.12.domsum.png" alt="DOM SUM Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/5.13.domsum.png" alt="DOM SUM Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/5.14.domsum.png" alt="DOM SUM Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/5.15.domsum.png" alt="DOM SUM Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/5.16.domsum.png" alt="DOM SUM Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/5.17.domsum.png" alt="DOM SUM Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
         </div>
         <section class="recomendations-recipe">
           <h1>Descubre más proyectos<spam> de diseño gráfico y web</spam>
